--- a/.github/workflows/generate-digest.yml
+++ b/.github/workflows/generate-digest.yml
@@ -26,12 +26,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "latest"
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          uv pip install --system -e .
 
       - name: Generate digest
         env:
@@ -69,7 +72,7 @@ jobs:
           publish_dir: .
           publish_branch: gh-pages
           keep_files: false
-          exclude_assets: '.github,src,*.py,*.md,requirements.txt,config.yaml,*.log'
+          exclude_assets: '.github,src,*.py,*.md,requirements.txt,pyproject.toml,config.yaml,*.log'
 
       - name: Notify on failure
         if: failure()
